Added character encoding

--- a/HTML/HTML Fundamentals/Problem 1 - RunnersHomePage/Runners Home page.html
+++ b/HTML/HTML Fundamentals/Problem 1 - RunnersHomePage/Runners Home page.html
@@ -3,6 +3,7 @@
 <head>
 	<title>The runners Home &#8482;</title>
 	<link rel="stylesheet" type="text/css" href="common.css">
+	<meta charset="UTF-8">
 </head>
 <body>
 <div class="page">
