--- a/HTML/HTML Fundamentals/Problem 2 - Nested Lists/Nested Lists.html
+++ b/HTML/HTML Fundamentals/Problem 2 - Nested Lists/Nested Lists.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Nested Lists</title>
 	<link rel="stylesheet" type="text/css" href="common.css">
+	<meta charset="UTF-8">
 </head>
 <body>
 <ol>
