--- a/HTML/HTML Fundamentals/Problem 3 - Social site/Friends.html
+++ b/HTML/HTML Fundamentals/Problem 3 - Social site/Friends.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Doge social network</title>
 	<link rel="stylesheet" type="text/css" href="common.css">
+	<meta charset="UTF-8">
 </head>
 <body>
 <h1>Doge Social Network</h1>
