--- a/HTML/HTML Fundamentals/Problem 3 - Social site/Profile.html
+++ b/HTML/HTML Fundamentals/Problem 3 - Social site/Profile.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Doge social network</title>
 	<link rel="stylesheet" type="text/css" href="common.css">
+	<meta charset="UTF-8">
 </head>
 <body>
 <h1>Doge Social Network</h1>
@@ -12,7 +13,7 @@
 	<li><a href="Friends.html">Friends</a></li>
 </ul>
 <h2>Profile of Doge</h2>
-<img src="Doge.jpg"/>
+<img src="Doge.jpg" alt="profile picture"/>
 <p><b>Name:</b> Doge</p>
 <p><b>Birthday:</b> Top secret</p>
 <p><b>Occupation:</b> Celebrity</p>
