--- a/CSS/CSS Presentation/Problem 4. Windows Calculator/index.html
+++ b/CSS/CSS Presentation/Problem 4. Windows Calculator/index.html
@@ -101,8 +101,8 @@
                     <button disabled>1/<span class="italic">x</span></button>
                 </div>
                 <div>
-                    <button class="span1 btn">Lsh</button>
-                    <button class="span1 btn">Rsh</button>
+                    <button>Lsh</button>
+                    <button>Rsh</button>
                     <button class="letter" disabled>E</button>
                     <button class="number shadow">1</button>
                     <button class="number shadow">2</button>
