--- a/Facebook-Login-Test/index.html
+++ b/Facebook-Login-Test/index.html
@@ -21,7 +21,8 @@
     <!-- jQuery -->
     <script src="plugins/bootstrap-theme/js/jquery.js"></script>
     <!--Sammy JS-->
-    <script src="plugins/sammy-js/lib/sammy.js" type="text/javascript" charset="utf-8"></script>
+    <script src="plugins/sammy-js/lib/sammy.js" type="text/javascript" charset="utf-8"></script>    
+    <script src="js/facebook-login.js"></script>
     <!-- Custom Fonts -->
     <link href="plugins/bootstrap-theme/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -38,6 +39,8 @@
 
 <body id="page-top" class="index">
 
+<div id="status">
+</div>
     <div id="main" class="container-fluid">
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
@@ -60,6 +63,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
+                    </li>
+                    <li class="nav-btn page-scroll">
+                        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                        </fb:login-button>
                     </li>
                     <li id="login-nav-btn" class="nav-btn page-scroll">
                         <a href="#/login" id="sign-in-anchor">Sign In</a>
@@ -150,7 +157,7 @@
     <script src="js/templates.js"></script>
     <script src="js/general-module.js"></script>
     <script src="js/instruments-module.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/login.js"></script>    
     <script src="js/app.js"></script>
 </body>
 
